<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PlaceInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username"
            android:layout_width="292dp"
            android:layout_height="62dp"
            android:layout_marginStart="10dp"
            android:hint="@string/user"
            android:inputType="textNoSuggestions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <EditText
            android:id="@+id/comment_input"
            android:layout_width="346dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:hint="Write a comment here"
            android:inputType="textNoSuggestions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/send_comment"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="Send review"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment_input" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-25dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:rating="0"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <TextView
            android:id="@+id/Place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/ratingTotal"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-20dp"
            android:layout_marginTop="24dp"
            android:scaleX="0.7"
            android:scaleY="0.7
"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Place_name"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/description"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:text="@string/description"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingTotal" />

        <ImageView
            android:id="@+id/imagePlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="TODO"
            app:layout_constraintEnd_toStartOf="@+id/timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:srcCompat="@drawable/ic_play" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="14dp"
            android:text="@string/zero"
            app:layout_constraintEnd_toStartOf="@+id/player"
            app:layout_constraintStart_toEndOf="@+id/imagePlay"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/address"
            android:layout_width="375dp"
            android:layout_height="37dp"
            android:layout_marginStart="15dp"
            android:text="@string/address"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Place_name" />

        <SeekBar
            android:id="@+id/player"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="265dp"
            android:layout_height="21dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/timer"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="600dp"
            android:layout_height="400dp"
            android:layout_marginTop="8dp"
            android:focusable="auto"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="20dp"
            android:text="@string/video"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player" />

        <TextView
            android:id="@+id/img_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:text="Images"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoView" />

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imgSlider"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            app:auto_cycle="true"
            app:corner_radius="5"
            app:delay="0"
            app:error_image="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_text"
            app:period="1000"
            app:placeholder="@drawable/placeholder" />

        <TextView
            android:id="@+id/review_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="Reviews"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_comment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_title" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:text="Location"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSlider" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>