<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll3"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EventInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textColor="#F3EAEA"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_event"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="16dp"
            android:text="@string/description"
            android:textColor="#F3EAEA"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_event" />

        <TextView
            android:id="@+id/address_event"
            android:layout_width="375dp"
            android:layout_height="37dp"
            android:layout_marginStart="19dp"
            android:text="@string/address"
            android:textColor="#F3EAEA"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name" />

        <TextView
            android:id="@+id/img_text_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:text="Images"
            android:textColor="#F3EAEA"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_event" />

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imgSlider_event"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            app:auto_cycle="true"
            app:corner_radius="5"
            app:delay="0"
            app:error_image="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_text_event"
            app:period="1000"
            app:placeholder="@drawable/placeholder" />

        <TextView
            android:id="@+id/location_text_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:text="Location"
            android:textColor="#F3EAEA"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSlider_event" />

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_text_event">

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>